src/objects/Case_Assignment_Rules__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Case Assignment rules that will be used when updating case assignments</description>
    <fields>
        <fullName>Case_Prep__c</fullName>
        <inlineHelpText>The Assignment rule that will be used when updating cases of type Case Prep.</inlineHelpText>
        <label>Case Prep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collections__c</fullName>
        <label>Collections</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Manual_Underwriting__c</fullName>
        <inlineHelpText>The Assignment rule that will be used when updating cases of type Manual Underwriting.</inlineHelpText>
        <label>Creation Manual Underwriting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Arrears__c</fullName>
        <label>Early_Arrears</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud__c</fullName>
        <inlineHelpText>The Assignment rule that will be used when updating cases of type Fraud.</inlineHelpText>
        <label>Fraud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recoveries__c</fullName>
        <inlineHelpText>The Assignment rule that will be used when updating cases of type Recoveries.</inlineHelpText>
        <label>Recoveries</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensitive__c</fullName>
        <inlineHelpText>The Assignment rule that will be used when updating cases of type Sensitive.</inlineHelpText>
        <label>Sensitive</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Leader__c</fullName>
        <inlineHelpText>The Assignment rule that will be used when updating cases of type Team Leader.</inlineHelpText>
        <label>Team Leader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <inlineHelpText>The Assignment rule that will be used when updating cases of type Underwriter.</inlineHelpText>
        <label>Underwriter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Assignment Rules</label>
</CustomObject>